Update Makefile and svm_struct

--- a/svm_struct/Makefile
+++ b/svm_struct/Makefile
@@ -55,3 +55,13 @@ svm_struct_api.o: svm_struct_api.c svm_struct_api.h svm_struct_api_types.h svm_s
 
 svm_struct_learn_custom.o: svm_struct_learn_custom.c svm_struct_api.h svm_light/svm_common.h svm_struct_api_types.h svm_struct/svm_struct_common.h
 	$(CC) -c $(CFLAGS) svm_struct_learn_custom.c -o svm_struct_learn_custom.o
+
+run:
+	wget https://www.dropbox.com/s/0b0f8lyzmdihugr/48_39.map?dl=0
+	wget https://www.dropbox.com/s/pauz0wckzwpm312/48_idx_chr.map_b?dl=0
+	wget https://www.dropbox.com/s/vsr19fnolqrxca7/fbank_nn_svm_test.save?dl=0
+	wget https://www.dropbox.com/s/53qom98k7e6vdy6/fbank_nn_svm_training.save?dl=0
+	wget https://www.dropbox.com/s/y1iuf1rglf30mnc/fbank_svm_testing.sents?dl=0
+	./svm_empty_learn -c 1000 fbank_nn_svm_training.save fbank_nn_svm_c1000.model
+	./svm_empty_classify fbank_nn_svm_test.save fbank_nn_svm_c1000.model fbank_nn_svm_test1000.output
+	python post_process_svm_output.py
